# scanlined-bevy

./: Cargo.toml
assets/shaders/: rect_outlined.wgsl  shader.wgsl
src/: camera.rs  debug.rs  easings.rs  indexable.rs  input.rs  inspector.rs  lib.rs  main.rs  window.rs
src/grid/: position.rs
src/materials/: mod.rs  rect_outlined.rs
src/pixels/: components.rs  mod.rs  systems.rs
src/scenes/: mod.rs  story.rs
src/utils/: misc.rs  mod.rs  run_if.rs
