[package]
name = "scanlined-bevy"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
# bevy = { path = "../bevy", features = ["dynamic_linking"] }
bevy = { version = "0.15.1", features = ["dynamic_linking"] }

bevy_mod_index = { version = "0.6.0", features = ["reflect"] }

bevy-inspector-egui = "0.29"
bevy_window = { version = "0.15.0" }
bevy_egui = { version = "0.32", default-features = false }
egui = "0.30"
egui_plot = "0.30"

rand = "0.9.0"

[dev-dependencies]
# bevy = { version = "0.15.1", features = ["dynamic_linking"] }
